# rust-forward-proxy

./: .dockerignore  .env  .env.test  .gitignore  BROWSER_CONFIGURATION.md  Cargo.toml  DEMO.md  Dockerfile  MIGRATION_SUMMARY.md  Makefile  PLUGGABLE_ARCHITECTURE.md  README.md  config-docker.yml  config.example.yml  config.yml  docker-compose.prod.yml  docker-compose.yml  env.example  redis.conf  test_load_balancing.sh  test_multi_process.sh  todo.md
ca-certs/: rootCA.crt  rootCA.key  rootCA.srl
certs/: proxy.crt  proxy.key  test-proxy.crt  test-proxy.key
docs/: BROWSER_SETUP.md  CERTIFICATES.md  CERTIFICATE_CACHING.md  CERTIFICATE_MODES.md  CONFIGURATION.md  CUSTOM_CERTIFICATE.md  DOCKER.md  HTTPS_IMPLEMENTATION.md  LIBRARIES.md  LOGGING_CHANGES.md  LOGGING_SETUP.md  MAKEFILE_CHANGES.md  MULTI_PROCESS_SETUP.md  PERFORMANCE_OPTIMIZATION.md  PROXY_USAGE.md  README.md  SECURLY_INTEGRATION.md  SETUP.md  architecture.md  demo_intercept.md  deployment.md  documentation.md  middleware.md  performance.md  upstream.md  usage.md
examples/: README.md
examples/middleware/: README.md  logging.rs  rate_limit.rs
examples/upstream/: README.md
scripts/: generate_trusted_cert.sh  setup_ca.sh  setup_custom_cert.sh  test_https_proxy.sh  test_logging_levels.sh  test_privileged_ports.sh  test_proxy.sh  test_proxy_both_modes.sh  test_securly_integration.sh
src/: lib.rs  main.rs  main_cli.rs  main_pluggable.rs
src/cli/: cert.rs  mod.rs  server.rs
src/config/: mod.rs  settings.rs
src/error/: mod.rs
src/logging/: mod.rs
src/models/: mod.rs
src/proxy/: core.rs  httpClient.rs  http_client.rs  hyper_impl.rs  mod.rs  pingora_impl.rs  pingora_server.rs  reqwest_impl.rs  server.rs  streaming.rs
src/proxy/middleware/: auth.rs  logging.rs  mod.rs
src/proxy/upstream/: client.rs  connection_pool.rs  health_check.rs  mod.rs
src/tls/: cache.rs  cert_gen.rs  config.rs  mod.rs  server.rs
src/utils/: http.rs  logging.rs  mod.rs  time.rs  url.rs
test_certs/: demo.crt  demo.key
