[package]
name = "rust-forward-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP server and client
hyper = { version = "0.14", features = ["full", "server", "client"] }

# Additional support for proxying
futures = "0.3"

# Serialization for logging
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SSL/TLS support
rustls = "0.21"
tokio-rustls = "0.24"

# URL parsing
url = "2.4"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.1" # Bridge log events to tracing

# Optional: For form data parsing
form_urlencoded = "1.2"

# Redis support
redis = { version = "0.23", features = ["tokio-comp"] }
